syntax = "proto3";

package erda.core.monitor.expression;
option go_package = "github.com/erda-project/erda-proto-go/core/monitor/expression/pb";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "common/openapi.proto";
import "core/monitor/alert/alert.proto";

service ExpressionService {
  option (erda.common.openapi_service) = {
    service: "monitor",
    auth: {
      check_login: true,
      check_token: true,
    }
  };
  rpc GetAllEnabledExpression (GetAllEnabledExpressionRequest) returns (GetAllEnabledExpressionResponse) {
    option (google.api.http)     = {
      get: "/api/org/expression"
    };
    option (erda.common.openapi) = {
      path: "/api/org/expression"
    };
  }
  rpc GetAllAlertRules (GetAllAlertRulesRequest) returns (GetAllAlertRulesResponse) {
    option (google.api.http)     = {
      get: "/api/org/rules"
    };
    option (erda.common.openapi) = {
      path: "/api/org/rules"
    };
  }
}

message GetAllEnabledExpressionRequest {}

message GetAllEnabledExpressionResponse {
  map<string, EnabledExpression> data = 1;
}

message EnabledExpression {
  repeated Expression expression = 1;
}

message Expression {
  int64                              id         = 1;
  string                             version    = 2;
  map<string, google.protobuf.Value> attributes = 3;
  map<string, google.protobuf.Value> expression = 4;
  bool                               enable     = 5;
  int64                              alertId    = 6 [json_name = "alert_id"];
}

message GetAllAlertRulesRequest {
  string scope = 1;
}

message GetAllAlertRulesResponse {
  AllAlertRules data = 1;
}

message AllAlertRules {
  repeated erda.core.monitor.alert.AlertTypeRule     alertRule  = 1;
  repeated int64                                 windows    = 2;
  repeated erda.core.monitor.alert.Operator      operators  = 3;
  repeated erda.core.monitor.alert.DisplayKey    aggregator = 4;
  repeated erda.core.monitor.alert.NotifySilence silence    = 5;
}
